Updated postRepositories, craeted my global search with the view

--- a/MyForum/Content/Style.css
+++ b/MyForum/Content/Style.css
@@ -156,11 +156,11 @@ table{
     color: black;
     width: 80%;
 }
-.postReplyPage, .forumsPage, .frontPageImage {
+.postReplyPage, .forumsPage, .frontPageImage, .searchView {
     padding-top: 0;
 }
 @media (max-width: 980px) {
-    .postReplyPage, .forumsPage, .frontPageHeading {
+    .postReplyPage, .forumsPage, .frontPageHeading, .searchView {
         padding-top: 132px;
     }
 }
