Styled the register, login, create post and forum pages. Also added the create forum controller

--- a/MyForum/Views/Forum/Topic.cshtml
+++ b/MyForum/Views/Forum/Topic.cshtml
@@ -1,88 +1,91 @@
 ﻿@model MyForum.Models.Post.ForumTopicViewModel
 
+<div class="topicPage">
 <div class="jumbotron" id="topicHeading">
-    <div class="forumName">
+
         @if (Model.Forum.Name == "Python")
             {
-            <img src="~/Content/python.png" alt="pythonLogo" />
+            <div class="Logo" style="background-image: url('/Content/python.png')"></div>
         }
         @if (Model.Forum.Name == "C#")
             {
-            <img src="~/Content/csharp.png" alt="c#Logo" />
+            <div class="Logo" style="background-image: url('/Content/csharp.png')"></div>
         }
         @if (Model.Forum.Name == "Javascript")
             {
-            <img src="~/Content/javascript.png" alt="javascriptLogo" />
+            <div class="Logo" style="background-image: url('/Content/javascript.png')"></div>
         }
         @if (Model.Forum.Name == "Go")
             {
-            <img src="~/Content/go.png" alt="goLogo" />
+            <div class="Logo" style="background-image: url('/Content/go.png')"></div>
         }
         @if (Model.Forum.Name == "Java")
             {
-            <img src="~/Content/java.png" alt="javaLogo" />
+            <div class="Logo" style="background-image: url('/Content/java.png')"></div>
         }
         @if (Model.Forum.Name == "C")
             {
-            <img src="~/Content/c.png" alt="cLogo" />
+            <div class="Logo" style="background-image: url('/Content/c.png')"></div>
         }
         @if (Model.Forum.Name == "C++")
             {
-            <img src="~/Content/cpp.png" alt="C++Logo" />
+            <div class="Logo" style="background-image: url('/Content/cpp.png')"></div>
         }
         @if (Model.Forum.Name == "CSS")
             {
-            <img src="~/Content/css.png" alt="cssLogo" />
+            <div class="Logo" style="background-image: url('/Content/css.png')"></div>
         }
         @if (Model.Forum.Name == "Html")
             {
-            <img src="~/Content/html.png" alt="htmlLogo" />
+            <div class="Logo" style="background-image: url('/Content/html.png')"></div>
         }
         @if (Model.Forum.Name == "Swift")
             {
-            <img src="~/Content/swift.png" alt="swiftLogo" />
+            <div class="Logo" style="background-image: url('/Content/swift.png')"></div>
         }
         @if (Model.Forum.Name == "Ruby")
             {
-            <img src="~/Content/ruby.png" alt="rubyLogo" />
+            <div class="Logo" style="background-image: url('/Content/ruby.png')"></div>
         }
         @if (Model.Forum.Name == "Kotlin")
             {
-            <img src="~/Content/kotlin.png" alt="kotlinLogo" />
+            <div class="Logo" style="background-image: url('/Content/kotlin.png')"></div>
         }
-        <h2>@Model.Forum.Name Forum</h2>
-        <form method="post" action="/Forum/Search/@Model.Forum.Id" role="form">
-            <div class="searchForm">
-                <input id="SearchQuery" name="SearchQuery" type="text" placeholder="Search...." class="searchBar" onfocus="clearThis(this)" />
-                @Html.HiddenFor(m => m.Forum.Id, new { id = Model.Forum.Id })
-                <button type="submit" class="btn buttonSearch">
-                    <i class="fa fa-search" style="font-size:20px"></i>
-                </button>
-            </div>
-        </form>
-    </div>
-    <div class="forumCreatePost">
-        <p style="padding-top: 20px">Welcome to the @Model.Forum.Name forum. <br/>
-        Please keep the posts friendly and on-topic. </p>
-        @if (!User.Identity.IsAuthenticated)
-        {
-            <p>
-                <span>You must be a 
-                    <a href="/Account/Register">
-                        registered member
-                    </a>
-                to create a new post. </span>
-             </p>
-        }
-        @if (User.Identity.IsAuthenticated)
-        { 
-            <p>
-                <span style="position: relative; float: right; padding-bottom: 10px;padding-top: 10px; padding-right: 20px">
-                    <a href="/Post/Create/@Model.Forum.Id" class="btn btn-info">Create New Post</a>
-                </span>
-             </p>
-        }
-    </div>
+        <h2> @Model.Forum.Name Forum</h2>
+    <form method="post" action="/Forum/Search/@Model.Forum.Id" role="form">
+        <div class="searchForm">
+            <input id="SearchQuery" name="SearchQuery" type="text" placeholder="Search...." class="searchBar" onfocus="clearThis(this)" />
+            @Html.HiddenFor(m => m.Forum.Id, new { id = Model.Forum.Id })
+            <button type="submit" class="btn buttonSearch">
+                <i class="fa fa-search" style="font-size:20px"></i>
+            </button>
+        </div>
+    </form>
+        <hr/>
+            <p style="padding-top: 10px">
+                Welcome to the @Model.Forum.Name forum. <br />
+                Please keep the posts friendly and on-topic.
+            </p>
+            @if (!User.Identity.IsAuthenticated)
+            {
+                <p>
+                    <span>
+                        You must be a
+                        <a href="/Account/Register">
+                            registered member
+                        </a>
+                        to create a new post.
+                    </span>
+                </p>
+            }
+            @if (User.Identity.IsAuthenticated)
+            {
+                <p>
+                    <span style="position: relative; float: right; padding-bottom: 10px;padding-top: 10px; padding-right: 20px">
+                        <a href="/Post/Create/@Model.Forum.Id" class="btn btn-info">Create New Post</a>
+                    </span>
+                </p>
+           }
 </div>
 @if (Model.Posts.Any())
 {
@@ -99,27 +102,26 @@
                                     <span>
                                         <a href="/Post/Index/@topic.Id">
                                             @topic.Title
-                                        </a>
+                                        </a><br />
+                                        <span style="font-size: 12px; padding-left: 35px">Started By <a href="/Profile/Details/@topic.AuthorId" style="color: indianred; font-size: 12px">@topic.AuthorName</a></span>
                                     </span>
                                 </div>
-                                <div class="subTitle">
-                                    <span>Started By <a href="/Profile/Details/@topic.AuthorId">@topic.AuthorName</a></span>
-                                </div>
+                                
                             </div>
 
                             <div class="col-md-3" style="vertical-align: middle">
                                 <div class="subTitle">
-                                    @if (topic.RepliesCount == 1)
+                                    @if (topic.RepliesCount >= 2)
                                     {
-                                        <span class="fa fa-comment"> @topic.RepliesCount Comment</span>
+                                        <span class="fa fa-comment"> @topic.RepliesCount Comments</span>
                                     }
                                     @if (topic.RepliesCount == 0)
                                     {
                                         <span class="fa fa-comments"> No Comments</span>
                                     }
-                                    else
+                                    @if (topic.RepliesCount == 1)
                                     {
-                                        <span class="fa fa-comments"> @topic.RepliesCount Comments</span>
+                                        <span class="fa fa-comments"> 1 Comment</span>
                                     }
                                     <br />
                                     <span class="fa fa-user-o" id="postUser">
@@ -137,19 +139,19 @@
                                         TimeSpan span = endTime.Subtract(startTime);
                                         var datePosted = span;
 
-                                        if (datePosted.Seconds <= 59 && datePosted.Minutes == 0 && datePosted.Hours == 0)
+                                        if (datePosted.Seconds <= 59 && datePosted.Minutes == 0 && datePosted.Hours == 0 && datePosted.Days == 0)
                                         {
                                             <span>
                                                 Posted: @datePosted.Seconds secs ago
                                             </span>
                                         }
-                                        if (datePosted.Minutes <= 59 && datePosted.Hours == 0)
+                                        if (datePosted.Minutes <= 59 && datePosted.Hours == 0 && datePosted.Days == 0)
                                         {
                                             <span>
                                                 Posted: @datePosted.Minutes mins ago
                                             </span>
                                         }
-                                        if (datePosted.Hours <= 24 && datePosted.Days == 0)
+                                        if (datePosted.Hours <= 23 && datePosted.Days == 0)
                                         {
                                             <span>
                                                 Posted: @datePosted.Hours hours ago
@@ -182,16 +184,23 @@
 else
 {
 <div class="noPost">
-        <h3>
-            It looks like there are no @Model.Forum.Name posts yet. <br/>
-            Why not
-            <a href="/Post/Create/@Model.Forum.Id">
-                <span style="color: #17a2b8; font-weight:500">Post</span>
-            </a>
-            something?
-        </h3>
+    <h3>
+        It looks like there are no @Model.Forum.Name posts yet.
+    </h3><br/>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <p>
+                    Why not
+                        <a href= "/Post/Create/@Model.Forum.Id" >
+                            <span style= "color: #17a2b8; font-weight:500" > Post </span>
+                        </a>
+                    something?
+                  </p>
+            }
+           
 </div>
 }
+</div>
 
 @section Scripts{
     <script>
