--- a/MyForum/Content/Style.css
+++ b/MyForum/Content/Style.css
@@ -62,11 +62,14 @@
     border: 1px solid white;
     border-radius: 5px;
 }
-.Logo{
-    display: inline-block;
-    border-radius: 3px;
-    margin-right: 20px;
+.forumTitle{
+    display: inline;
     float: left;
+}
+.Logo{
+    display: inline;
+    float: left;
+    border-radius: 3px;
     border: 1px solid #555;
     height: 40px;
     width: 40px;
@@ -76,8 +79,9 @@
 .forumTitle span{
     padding-left: 10px;
 }
-.forumTitle i {
-    margin-top:20px;
+.forumName{
+    padding-top: 10px;
+    padding-left: 50px;
 }
 small{
     font-size: 80%;
@@ -86,7 +90,7 @@ small{
 .subTitle a{
     color: indianred;
 }
-.subTitle span {
+.subTitle span{
     font-size: 12px;
     padding-left: 20px;
 }
@@ -110,21 +114,43 @@ table{
     background-color: #000000;
     border: 1px solid white;
 }
-#topicHeading .forumName{
-    border-bottom: 1px solid white;
+#topicHeading p{
+    margin-bottom: 0px;
 }
-.forumCreatePost{
-    display: inline;
+#topicHeading hr {
+        border: none;
+        margin-top: 0;
+        margin-bottom: 0;
+        border-top: 2px solid white;
+        margin-right: 20px;
 }
-.forumCreatePost p {
-    margin: 0;
+#topicHeading h2 {
+    padding-left: 50px;
 }
-.forumName form .buttonSearch{
-    background: none !important;
-    color: red;
+.buttonSearch{
     padding: 0 !important;
-    font: inherit;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+}
+.createPostHeading{
+    background-color: black;
+    padding-top: 30px;
+    padding-bottom: 50px;
+    border: 1px solid white;
+}
+.createPostHeading hr {
+        border: none;
+        margin-top: 0;
+        margin-bottom: 0;
+        border-top: 2px solid white;
+        margin-right: 20px;
+}
+.createPostBody{
+    background-color: white;
+    border: 1px solid white;
+}
+.createPostBody h4{
+    padding-left: 10px;
+    padding-top: 10px;
 }
 .postHeading{
     margin-top: 20px;
@@ -156,15 +182,15 @@ table{
     color: black;
     width: 80%;
 }
-.postReplyPage, .forumsPage, .frontPageImage, .searchView {
+.postReplyPage, .forumsPage, .frontPageImage, .searchView, .profilePage, .replyPage, .loginPage, .topicPage, .createPostPage, .registerPage {
     padding-top: 0;
 }
 @media (max-width: 980px) {
-    .postReplyPage, .forumsPage, .frontPageHeading, .searchView {
+    .postReplyPage, .forumsPage, .frontPageHeading, .searchView, .profilePage, .replyPage, .loginPage, .topicPage, .createPostPage, .registerPage {
         padding-top: 132px;
     }
 }
-.postReplyPage .postBody{
+.postReplyPage .postBody, .replyBody{
     background-color: white;
     margin-top: 30px;
     border-radius: 5px;
@@ -172,9 +198,137 @@ table{
 .postReplyPage .postBody .col-md-3{
     border-right: 1px solid black;
 }
+.replyBody{
+    margin-top: 20px;
+}
+.postAuthor{
+    padding-bottom: 10px;
+    padding-top: 10px;
+    
+}
 .noReplies {
     text-align: center;
 }
 #latestPostTable{
     border: 1px solid white;
+}
+.profileHeading{
+    background-color: black;
+    border: 1px solid white;
+    padding-bottom: 50px;
+    padding-top: 30px;
+}
+.profilePage hr{
+    border: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    border-top: 2px solid white;
+}
+.profileDetails{
+    background-color: white;
+    padding: 20px;
+}
+.profileDetails span{
+    color: black;
+}
+.profileIconColumn {
+    background-color: white;
+    padding-right: 0px;
+    padding-left: 0px;
+    border-radius: 5px 0px 0px 5px;
+}
+.profileIcon{
+    vertical-align: middle;
+    padding-left: 70px;
+    padding-top: 30px;
+}
+.profileColumn {
+    padding-left: 0px;
+    border-left: 1px solid black;
+    padding-right: 0px;
+    border-radius: 0px 5px 5px 0px;
+}
+.registerPageHeading {
+    background-color: black;
+    padding-top: 20px;
+    padding-bottom: 50px;
+    border: 1px solid white;
+}
+.registerPageHeading hr {
+        border: none;
+        margin-top: 0;
+        margin-bottom: 0;
+        border-top: 2px solid white;
+        margin-right: 20px;
+}
+.registerPageBody h4 {
+    padding-left: 10px;
+    padding-top: 10px;
+}
+.registerPageBody {
+    background-color: white;
+    border: 1px solid white;
+}
+.loginPageTitle {
+    background-color: black;
+    border: 1px solid white;
+    padding-bottom: 50px;
+    padding-top: 30px;
+}
+.loginPageTitle hr {
+        border: none;
+        margin-top: 0;
+        margin-bottom: 0;
+        border-top: 2px solid white;
+}
+.loginPageBody{
+    background-color: white;
+    border: 1px solid black;
+   border-radius: 5px;
+}
+#socialLoginForm, h4{
+    color: black;
+}
+.loginFirstColumn, .loginSecondColumn{
+    padding-top: 15px;
+}
+.replyPageheading {
+    background-color: black;
+    border: 1px solid white;
+    padding-bottom: 50px;
+    padding-top: 30px;
+}
+.replyPageheading hr {
+        border: none;
+        margin-top: 0;
+        margin-bottom: 0;
+        border-top: 2px solid white;
+}
+.postReplyContent {
+    background-color: #343a40;
+    margin-bottom: 20px;
+    border: 1px solid white;
+    border-radius: 10px;
+}
+.postReplyContent h5{
+    padding-left: 30px;
+    padding-top:10px;
+    padding-bottom: 10px;
+}
+.postReplyForm{
+    background-color: ghostwhite;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.postReplyForm h4{
+    margin-bottom: 0px;
+    margin-top: 5px;
+}
+.replyInputColumn{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+.postReplyBody{
+    border: 1px solid black;
+    border-radius: 5px;
 }
