--- a/MyForum/Views/Home/Index.cshtml
+++ b/MyForum/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                         <td>
                             <div class="row">
                                 <div class="col-md-6">
-                                    
+                                   
                                         @if(post.Forum.Name == "Python")
                                         {
                                             <div class="Logo" style="background-image: url('/Content/python.png')"></div>
@@ -88,27 +88,25 @@
                                         <span>
                                             <a href="/Post/Index/@post.Id">
                                                 @post.Title
-                                            </a>
+                                            </a><br/>
+                                            <span style="font-size: 12px">Started By <a href="/Profile/Details/@post.AuthorId" style="color: indianred; font-size: 12px">@post.AuthorName</a> in <a href="/Forum/Index/@post.Forum.Id" style="color: indianred; font-size: 12px">@post.Forum.Name</a> Forum</span>
                                         </span>
-                                    </div>
-                                    <div class="subTitle">
-                                        <span>Started By <a href="/Profile/Details/@post.AuthorId">@post.AuthorName</a> in <a href="/Forum/Index/@post.Forum.Id">@post.Forum.Name</a> Forum</span>
                                     </div>
                                     </div>
                                    
                                       <div class="col-md-3" style="vertical-align: middle">
                                         <div class="subTitle">
-                                        @if (post.RepliesCount == 1)
+                                        @if (post.RepliesCount >= 2)
                                         {
-                                            <span class="fa fa-comment"> @post.RepliesCount Comment</span>
+                                            <span class="fa fa-comments"> @post.RepliesCount Comments</span>
                                         }
                                         @if (post.RepliesCount == 0)
                                         {
                                         <span class="fa fa-comments"> No Comments</span>
                                         }
-                                        else
+                                        @if (post.RepliesCount == 1)
                                         {
-                                        <span class="fa fa-comments"> @post.RepliesCount Comments</span>
+                                            <span class="fa fa-comments"> 1 Comment</span>
                                         }
                                         <br/>
                                         <span class="fa fa-user-o" id="postUser">
@@ -126,13 +124,13 @@
                                                 TimeSpan span = endTime.Subtract(startTime);
                                                 var datePosted = span;
 
-                                            if (datePosted.Seconds <= 59 && datePosted.Minutes == 0 && datePosted.Hours == 0 )
+                                            if (datePosted.Seconds <= 59 && datePosted.Minutes == 0 && datePosted.Hours == 0 && datePosted.Days == 0 )
                                             {
                                                 <span>
                                                     Posted: @datePosted.Seconds secs ago
                                                 </span>
                                             }
-                                                if (datePosted.Minutes <= 59 && datePosted.Hours == 0)
+                                                if (datePosted.Minutes <= 59 && datePosted.Hours == 0 && datePosted.Days == 0)
                                                 {
                                                     <span>
                                                         Posted: @datePosted.Minutes mins ago
