--- a/MyForum/Views/Post/Create.cshtml
+++ b/MyForum/Views/Post/Create.cshtml
@@ -1,7 +1,12 @@
 ﻿@model MyForum.Models.Post.NewPostModel
 
-<h2>New Post | @Model.ForumName</h2>
-
+<div class="createPostPage">
+    <div class="jumbotron createPostHeading">
+        <h2>New Post || @Model.ForumName Forum</h2>
+        <hr />
+    </div>
+<div class="row createPostBody">
+    <div class="col-md-12">
 @using (Html.BeginForm("AddPost", "Post", FormMethod.Post, new { @class = "form-horizontal", role = "form" , id = "newPostForm" }))
 {
     @Html.AntiForgeryToken()
@@ -10,23 +15,26 @@
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.Title, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Title, new { @class = "form-control" })
+        <div class="col-md-12">
+            @Html.TextBoxFor(m => m.Title, new { @class = "col-md-12 form-control", cols = "120" })
         </div>
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Content, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextAreaFor(m => m.Content, new { @class = "form-control" })
+        <div class="col-md-12">
+            @Html.TextAreaFor(m => m.Content, new { @class = "col-md-12 form-control", cols = "120" })
         </div>
     </div>
     @Html.HiddenFor(m => m.ForumId, new { id = Model.ForumId })
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Submit" />
+            <input type="submit" class="btn btn-primary" value="Submit Post" />
         </div>
     </div>
     
 }
+        </div>
+    </div>
+</div>
 
 
