Added Increment rating contoller

--- a/MyForum/Views/Forum/Create.cshtml
+++ b/MyForum/Views/Forum/Create.cshtml
@@ -2,7 +2,7 @@
 
 <div class="createPostPage">
     <div class="jumbotron createPostHeading">
-        <h2>New Post Forum</h2>
+        <h2>New Forum</h2>
         <hr />
     </div>
     <div class="row createPostBody">
