--- a/MyForum/Views/Forum/Topic.cshtml
+++ b/MyForum/Views/Forum/Topic.cshtml
@@ -47,6 +47,10 @@
             {
             <div class="Logo" style="background-image: url('/Content/ruby.png')"></div>
         }
+    @if (Model.Forum.Name == "Php")
+    {
+        <div class="Logo" style="background-image: url('/Content/php.png')"></div>
+    }
         @if (Model.Forum.Name == "Kotlin")
             {
             <div class="Logo" style="background-image: url('/Content/kotlin.png')"></div>
