--- a/MyForum/Views/Forum/Create.cshtml
+++ b/MyForum/Views/Forum/Create.cshtml
@@ -27,7 +27,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" class="btn btn-primary" value="Submit Post" />
+                        <input type="submit" class="btn btn-primary" value="Submit Forum" />
                     </div>
                 </div>
 
