--- a/MyForum/Views/Forum/Index.cshtml
+++ b/MyForum/Views/Forum/Index.cshtml
@@ -13,7 +13,7 @@
             <tr style="background-color: #343a40"> 
                 <td>
                     <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-2">
 
                             @if (forum.Name == "Python")
                             {
@@ -31,7 +31,7 @@
                             {
                                 <div class="Logo" style="background-image: url('/Content/go.png')"></div>
                             }
-                            @if (forum.Name == "Php")
+                            @if (forum.Name == "Php" || forum.Name == "php")
                             {
                                 <div class="Logo" style="background-image: url('/Content/php.png')"></div>
                             }
@@ -70,10 +70,42 @@
                             <div class="forumName">
                                 <a href="/Forum/Topic/@forum.Id"><strong style="text-transform: uppercase">@forum.Name</strong></a>
                             </div>
+                            @if (User.IsInRole("Admin"))
+                            {
+                                <a href="/Forum/Delete/id=@forum.Id" class="btn btn-primary modalLink" data-id="@forum.Id" data-toggle="modal" data-target="#myModal" style="margin-left: 10px; margin-top: 10px; padding: 5px 5px 5px 5px">
+                                    Delete
+                                </a>
+                                <form method="post" action="/Forum/Delete" role="form">
+                                    <div class="modal fade" id="myModal">
+                                        <div class="modal-dialog modal-lg modal-dialog-centered">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h3 class="modal-title" style="color: black">@forum.Name Forum</h3>
+                                                    <button class="close" type="button" data-dismiss="modal">&times</button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <h4>Are you sure you want to Delete this Forum?</h4>
+                                                    @Html.Hidden("id", "", new { @class = "hiddenid" })
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-danger" data-dismiss="modal">
+                                                        Close
+                                                    </button>
+                                                    
+                                                    <button type="submit" class="btn btn-primary">
+                                                        Delete
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            }
                         </div> 
-                        <div class="col-md-5">
+                        <div class="col-md-2">
                             <div class="forumDescription">
-                                @forum.Description
+                                @forum.ActiveUsers<br/>
+                                Users
                             </div>
                         </div>
                         <div class="col-md-2">
@@ -82,10 +114,9 @@
                                 Posts
                             </div>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-md-6">
                             <div class="dateCreated">
-                                Created On : <br/>
-                                @forum.Created
+                                @forum.Description
                             </div>
                         </div>
                     </div> 
@@ -97,3 +128,11 @@
 </div>
 </div>
 
+@section Scripts{
+    <script>
+        $(document).on("click", ".modalLink", function () {
+            var passedId = $(this).data('id');
+            $(".modal-body .hiddenid").val(passedId);
+        });
+    </script>
+    }
