--- a/MyForum/Views/Shared/_LoginPartial.cshtml
+++ b/MyForum/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="/Manage/Index" style="color: white"><i class="fa fa-user"></i> @User.Identity.GetUserName().ToUpper() <br/><small>Profile</small></a>
+            <a class="nav-link" href="/Profile/Details/@User.Identity.GetUserId()" style="color: white"><i class="fa fa-user"></i> @User.Identity.GetUserName().ToUpper() <br/><small>Profile</small></a>
         </li>
         <li class="nav-item"><a class="nav-link" href="javascript:document.getElementById('logoutForm').submit()" style="text-transform:uppercase">Log off</a></li>
     </ul>
